--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CodeOnly">
+        android:theme="@style/Theme.CodeOnly"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ConnectionActivity"
             android:exported="true">
